# ai-photo-system

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile.classify  SETUP.md  architecture_review.md  docker-compose.yml  local_llm_evaluation.md  photo_system_design_FINAL.md  photo_system_design_v3.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: photo-system.instructions.md  sdlc-core.instructions.md
.github/prompts/: plan.prompt.md  review.prompt.md
core/: __init__.py
core/api/: classify_server.py
core/client/: __init__.py  groq_client.py  llm_gateway.py  qwen_client.py
core/domain/: __init__.py  grade.py  storage_layout.py  user.py
core/infra/: __init__.py
core/pipeline/: __init__.py  layer5_album.py
core/repository/: __init__.py
core/service/: __init__.py  album_namer.py  backup_verifier.py  classifier.py  cleanup_service.py  food_categorizer.py  kpi_summarizer.py  nl_query.py  restored_detector.py  storage_service.py
core/tests/: conftest.py
core/tests/unit/: test_backup_verifier.py  test_classifier.py  test_cleanup_service.py  test_grade.py  test_layer5_album.py  test_llm_gateway.py  test_restored_detector.py  test_storage_layout.py  test_storage_service.py  test_user.py
handoff/: SESSION-CHECKPOINT.md
prompts/: README.md
runbooks/: README.md  cloudflare_external_classify.md  layer6_ios_shortcut.md  layer6_macrodroid.md
scripts/: README.md  after_llm_chain.sh  auto_classify_pending.py  auto_enqueue_trash.py  backfill_classification_v2.py  backfill_immich_deleted_at.py  backfill_opencv_signals.py  backfill_video_grade_v3.py  backfill_video_metadata.py  build_albums.py  build_grade_views.py  categorize_food.py  check_groq_routing.py  cleanup_mac_non_icloud.py  cleanup_now.sh  cleanup_photos_mac.py  cleanup_run.py  cron.dev  cron.prod  daily_cleanup_summary.py  dedup_album_clip.py  dedup_similar.py  deploy-verify.sh  detect_restored_assets.py  doc-consistency-check.sh  health_monitor.py  integrity_check.py  integrity_check_daily.sh  maintenance.sh  memory_guard.sh  migrate_2026_05_08_evaluation.sql  migrate_2026_05_09_event_split.sql  migrate_2026_05_10_confidence_backfill.sql  migrate_2026_05_10_wedding_protect.sql  migrate_2026_05_11_sub_category.sql  migrate_backup.py  migrate_db_init.sql  migrate_restoration_audit.sql  migrate_videos_no_convert.py  monitor_iphone_uploads.py  (+22 more)
scripts/_inventory/: .gitignore  benchmark_ensemble_result.csv  benchmark_ensemble_summary.md  benchmark_groq_result.csv  benchmark_groq_summary.md  benchmark_result.csv  benchmark_summary.md  phase5_dryrun_20260502.txt
scripts/launchd/: README.md  com.photo.cleanup-mac-non-icloud.plist  com.photo.cleanup-mac.plist  com.photo.daily-summary.plist  com.photo.sync-albums.plist  install.sh
scripts/n8n/: phase4_workflow_plan.md  workflow_auto_classify.json
tools/: photo_delete  photo_delete.swift  photos_cli  photos_cli.swift
wiki/01-sot/: grade_classification_spec.md
wiki/03-pdca/active/report/: 2026-05-04.md  2026-05-05.md  2026-05-08.md  (+7 more)
wiki/04-guides/: copilot-setup.md
workflows/: README.md
